# aether

./: CMakeLists.txt  LICENSE  README.md
include/aether/: aether.h
source/: CMakeLists.txt  a_mathematical.c  a_matrix.c  a_vector.c
